# OOP-Tema-2

./: .gitignore  CMakeLists.txt  main.cpp  makefile
headers/: complexNum.h  object.h  objectArray.h  point.h
headers/exceptions/: dimension_too_small.h  index_out_of_range.h  null_object.h
sources/: complexNum.cpp  object.cpp  objectArray.cpp  point.cpp
sources/exceptions/: dimenstion_too_small.cpp  index_out_of_range.cpp  null_object.cpp
